[gd_scene load_steps=15 format=2]

[ext_resource path="res://EnemyType1/EnemyType1.gd" type="Script" id=1]
[ext_resource path="res://Assets/CharacterSprite/zombie_png.png" type="Texture" id=2]
[ext_resource path="res://Assets/Sound_Effect/bullet-impacting-concrete-brick-gamemaster-audio-1-1-00-00.mp3" type="AudioStream" id=3]
[ext_resource path="res://Assets/Sound_Effect/Zombie_Moan_Sound.mp3" type="AudioStream" id=4]
[ext_resource path="res://Assets/Sound_Effect/bullet-impacting-snow-gamemaster-audio-4-4-00-00.mp3" type="AudioStream" id=5]
[ext_resource path="res://Assets/Sound_Effect/Zombie_Bite_Sound.mp3" type="AudioStream" id=6]
[ext_resource path="res://Assets/Sound_Effect/fire-raging-in-hell-smartsound-fx-1-01-00.mp3" type="AudioStream" id=7]
[ext_resource path="res://Assets/Sound_Effect/demonic-monster-growling-joshua-chivers-2-2-00-03-[AudioTrimmer.com].mp3" type="AudioStream" id=8]

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 100, 100 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 2 )
region = Rect2( 100, 0, 100, 100 )

[sub_resource type="AtlasTexture" id=11]
atlas = ExtResource( 2 )
region = Rect2( 0, 100, 100, 100 )

[sub_resource type="SpriteFrames" id=3]
animations = [ {
"frames": [ SubResource( 9 ) ],
"loop": true,
"name": "Idle",
"speed": 5.0
}, {
"frames": [ SubResource( 10 ), SubResource( 11 ) ],
"loop": true,
"name": "Walk",
"speed": 5.0
} ]

[sub_resource type="CircleShape2D" id=12]

[sub_resource type="CircleShape2D" id=13]
radius = 11.2673

[node name="EnemyType1" type="KinematicBody2D" groups=["Collision", "Enemy"]]
rotation = 6.28319
scale = Vector2( 1.6, 1.6 )
script = ExtResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
rotation = 1.5708
scale = Vector2( 0.8, 0.8 )
frames = SubResource( 3 )
animation = "Idle"

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
polygon = PoolVector2Array( 20.0001, 13.3332, 21.1112, 11.111, 21.1111, 7.77768, 17.7778, 7.7777, 17.7778, 5.55548, 14.4445, 5.55549, 12.7778, 7.77772, 10, 8.33329, 2.77782, 8.88888, 1.11114, 7.22222, -1.11108, 7.22223, -0.55558, -5.55555, 6.66663, -7.22225, 12.7777, -7.77784, 14.4444, -5.00006, 17.7778, -5.00008, 17.7777, -7.2223, 20, -7.22231, 21.1111, -8.33343, 21.111, -13.889, 18.8888, -14.4445, 16.6666, -14.4445, 16.1111, -13.3334, 7.22217, -12.7778, 5.55549, -14.4445, 2.77771, -15, -2.22228, -13.3333, -5.00006, -12.7778, -7.77783, -11.6666, -10, -9.99996, -9.44448, -7.22218, -8.88886, 7.22226, -8.33328, 11.6667, -3.88883, 12.2222, -2.77771, 14.4445, 7.77784, 14.4444, 13.3334, 13.8888, 16.1112, 14.4444, 19.4445, 14.4444 )

[node name="Head" type="Area2D" parent="." groups=["Head"]]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Head"]
position = Vector2( -5.55555, 1.66669 )
shape = SubResource( 12 )

[node name="AttackRange" type="Area2D" parent="."]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="AttackRange"]
polygon = PoolVector2Array( 20.5, 8.49991, 20.4999, -14.0001, 2.99993, -15.5, -8.00005, -12, -10.5, -6.49995, -14.5, -0.499935, -14, 4.00006, -13, 6.50006, -9.99997, 7.00004, -9.49995, 10.5, -7.49995, 11.5, -4.49995, 12, -2.49994, 14, 8.50006, 14.5, 12.0001, 12.9999, 19.5001, 14.4999, 20.5001, 11.4999 )

[node name="AttackSpeed" type="Timer" parent="."]
wait_time = 0.599
autostart = true

[node name="Bite" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )
volume_db = -3.852

[node name="Moan" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
volume_db = -10.633

[node name="NormalShot" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )
volume_db = 12.235

[node name="headshot" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
volume_db = 14.857

[node name="NavigationAgent2D" type="NavigationAgent2D" parent="."]
path_desired_distance = 51.7
target_desired_distance = 51.7
path_max_distance = 61.0

[node name="NewPath" type="Timer" parent="."]
wait_time = 0.05
autostart = true

[node name="closestPlayer" type="Timer" parent="."]
wait_time = 1.5
autostart = true

[node name="moan timer" type="Timer" parent="."]
wait_time = 10.0
autostart = true

[node name="repulsionForce" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="repulsionForce"]
shape = SubResource( 13 )

[node name="fireManager" type="Node2D" parent="."]
position = Vector2( -5.62499, 1.25002 )

[node name="Fire" type="Timer" parent="fireManager"]
one_shot = true

[node name="fireDamage" type="Timer" parent="fireManager"]
wait_time = 0.15

[node name="fire" type="Position2D" parent="fireManager"]
position = Vector2( -4.76837e-07, 1.19209e-07 )

[node name="fireSound" type="AudioStreamPlayer" parent="fireManager"]
stream = ExtResource( 7 )
volume_db = -13.984

[node name="zombieFire" type="AudioStreamPlayer" parent="fireManager"]
stream = ExtResource( 8 )
volume_db = -9.614

[connection signal="on_fire" from="." to="." method="_on_EnemyType1_on_fire"]
[connection signal="body_entered" from="AttackRange" to="." method="_on_AttackRange_body_entered"]
[connection signal="body_exited" from="AttackRange" to="." method="_on_AttackRange_body_exited"]
[connection signal="timeout" from="AttackSpeed" to="." method="_on_AttackSpeed_timeout"]
[connection signal="timeout" from="NewPath" to="." method="_on_NewPath_timeout"]
[connection signal="timeout" from="closestPlayer" to="." method="_on_closestPlayer_timeout"]
[connection signal="timeout" from="moan timer" to="." method="_on_moan_timer_timeout"]
[connection signal="body_entered" from="repulsionForce" to="." method="_on_repulsionForce_body_entered"]
[connection signal="body_exited" from="repulsionForce" to="." method="_on_repulsionForce_body_exited"]
[connection signal="timeout" from="fireManager/Fire" to="." method="_on_Fire_timeout"]
[connection signal="timeout" from="fireManager/fireDamage" to="." method="_on_fireDamage_timeout"]
